just inlcude activemq-camel

--- a/Core/Corvus.Web/pom.xml
+++ b/Core/Corvus.Web/pom.xml
@@ -103,7 +103,7 @@
 
 		<dependency>
 			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-all</artifactId>
+			<artifactId>activemq-camel</artifactId>
 		</dependency>
 
 		<dependency>
